# 4_semestr

./: .gitignore  README.md
SSH/: CMakeLists.txt  powerssh.key
SSH/src/hashtable/: hashtable.h
SSH/src/pty/: pam.c  pam.h  pty.c  pty.h  pum.c  pum.h
SSH/src/rudp/: rudp.c  rudp.h  security.c  security.h
SSH/src/ssh_client/: main.c  ssh_client.c  ssh_client.h
SSH/src/ssh_server/: daemon.c  daemon.h  main.c  ssh_server.c  ssh_server.h
SSH/src/ssh_server_controller/: controller.c  controller.h
SSH/test/: client  client.c  server  server.c
class_tasks/task_1_sockets/: client.c  makefile  server.c
class_tasks/task_2_broadcast/: client.c  server.c
class_tasks/task_3_list/: list  list.h  main.c
src/hashtable/: hashtable.hpp  list_pointer.h  list_pointer.hpp
src/rudp/: rudp.c  rudp.h  security.c  security.h
src/ssh_client/: hashtable_config.h  ssh_client.h
src/ssh_server/: main.c  ssh_server.c  ssh_server.h
src/ssh_server_controller/: controller.c
